Yes Master? - solved problem with bouncing icon stuttering on Firefox; added experimental fix for fixed background stuttering while scrolling on IE Win 8.1

--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,7 @@ header h3 span {
   bottom: 2%;
   -webkit-animation: bounce 3s infinite;
   animation: bounce 3s infinite;
+  -webkit-transform-style: preserve-3d;
 }
 
 @-webkit-keyframes bounce {
